--- a/default.config.yml
+++ b/default.config.yml
@@ -34,48 +34,29 @@ dotfiles_files:
   - .vimrc
 
 homebrew_installed_packages:
-  # - ansible # Installed via Pip.
-  - autoconf
-  - bash-completion
-  - doxygen
-  - gettext
-  - gifsicle
   - git
   - gh
-  - go
-  - gpg
-  - httpie
-  - iperf
-  - libevent
-  - sqlite
   - nmap
   - node
   - nvm
-  - php
-  - pngpaste
-  - ssh-copy-id
-  - readline
-  - openssl
-  - pv
   - wget
-  - wrk
-  - zsh-history-substring-search
 
 homebrew_taps: []
 
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
-  - chromedriver
   - docker
-  - dropbox
   - firefox
   - google-chrome
-  - handbrake
-  - licecap
-  - sequel-ace
   - slack
-  - sublime-text
-  - transmit
+  - visual-studio-code
+  - obsidian
+  - github
+  - figma
+  - google-drive
+  - keepassxc
+  - rectangle
+  - timing
 
 # See `geerlingguy.mac.mas` role documentation for usage instructions.
 mas_installed_apps: []
